--- a/PC_windows_5800X/.vscode_c/settings.json
+++ b/PC_windows_5800X/.vscode_c/settings.json
@@ -73,7 +73,14 @@
         "ec_base.h": "c",
         "string.h": "c",
         "gf_w4.h": "c",
-        "gf_cpu.h": "c"
+        "gf_cpu.h": "c",
+        "ec_win.h": "c",
+        "gr.h": "c",
+        "immintrin.h": "c",
+        "macro_func.h": "c",
+        "ec_linux.h": "c",
+        "stdbool.h": "c",
+        "main_linux_backup": "c"
     },
     "C_Cpp.errorSquiggles": "Enabled",
     "restructuredtext.confPath": "",
