--- a/PC_windows_5800X/.vscode_c/tasks.json
+++ b/PC_windows_5800X/.vscode_c/tasks.json
@@ -3,14 +3,18 @@
         {
             "type": "shell",
             "label": "C: gcc.exe build active file",
-            "command": "D:\\TestEnvironment\\TDM-GCC-64\\bin\\gcc.exe",
+            "command": "E:\\developEnvironment\\TDM-GCC-64\\bin\\gcc.exe",
             "args": [
                 "-g",
                 "${file}",
                 "-o",
-                "${workspaceFolder}\\EXECUTE\\${fileBasenameNoExtension}.exe"
+                "${workspaceFolder}\\EXECUTE\\${fileBasenameNoExtension}.exe",
                 // "-I",
-                // "E:/DEVELOP/CPPWORKSTAION/C_version/open library/gf-complete-master/include",
+                // "./gr/include",
+                // "-L",
+                // "./gr/lib",
+                // "-Wl,--rpath=./gr/lib",
+                // "-lGR"
                 // "-I",
                 // "E:/DEVELOP/CPPWORKSTAION/C_version/open library/Jerasure-master/include"
                 // "-pthread"
@@ -30,18 +34,28 @@
         {
             "type": "shell",
             "label": "C_SIMD: gcc.exe build active file",
-            "command": "D:\\TestEnvironment\\TDM-GCC-64\\bin\\gcc.exe",
+            "command": "D:\\software\\develop_environment\\TDM-GCC-64\\bin\\gcc.exe",
             "args": [
                 "-fdiagnostics-color=always",
-                "-mavx",
-                "-mavx2",
-                "-O3",
-                // "-Og",
-                // "-fopenmp",
                 "-g",
                 "${file}",
+                "${fileDirname}/ec_win.c",
+                // "${fileDirname}/ec_win_arr.c",
+                // "${fileDirname}/ec_win_old.c",
                 "-o",
-                "${workspaceFolder}\\EXECUTE\\${fileBasenameNoExtension}.exe"
+                "${workspaceFolder}\\EXECUTE\\${fileBasenameNoExtension}.exe",
+                // "-O1",
+                // "-O2",
+                // "-O3",
+                "-Og",
+                "-mavx",
+                "-mavx2",
+                // "-fopenmp",
+                // "-lm",
+                "-I",
+                "${fileDirname}/",
+                // "-L",
+                // "${fileDirname}/-lec_win"
             ],
             "options": {
                 "cwd": "${fileDirname}"
@@ -53,7 +67,53 @@
                 "kind": "build",
                 "isDefault": true
             },
-            "detail": "编译器: D:\\TestEnvironment\\TDM-GCC-64\\bin\\gcc.exe"
+            "detail": "编译器: D:\\software\\develop_environment\\TDM-GCC-64\\bin\\gcc.exe"
+        },
+        {
+            "type": "shell",
+            "label": "C_SIMD多源文件: gcc.exe build active file",
+            "command": "D:\\software\\develop_environment\\TDM-GCC-64\\bin\\gcc.exe",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${file}",
+                // "${fileDirname}/*.c",
+                "${fileDirname}/ec_win.c",
+                "${fileDirname}/ec_base_func.c",
+                "${fileDirname}/diff_redun.c",
+                "${fileDirname}/diff_2redun.c",
+                "${fileDirname}/diff_2redun_30k.c",
+                "${fileDirname}/diff_3redun.c",
+                "${fileDirname}/ec_decode_data_16k_2origin_conv.c",
+                "${fileDirname}/ec_decode_data_30k_2origin_conv.c",
+                "${fileDirname}/ec_decode_data_16k_P_origin_conv.c",
+                "${fileDirname}/ec_decode_data_16k_Q_origin_conv.c",
+                "${fileDirname}/update_2reduns_16k.c",
+                "-o",
+                "${workspaceFolder}\\EXECUTE\\${fileBasenameNoExtension}.exe",
+                // "-O1",
+                // "-O2",
+                // "-O3",
+                "-Og",
+                "-mavx",
+                "-mavx2",
+                // "-lm",
+                "-I",
+                "${fileDirname}/",
+                // "-L",
+                // "${fileDirname}/-lec_win"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "detail": "编译器: D:\\software\\develop_environment\\TDM-GCC-64\\bin\\gcc.exe"
         }
     ],
     "version": "2.0.0"
