tasks in win update

--- a/PC_windows_11800h/.vscode_c/new_multiple_files_compile/tasks.json
+++ b/PC_windows_11800h/.vscode_c/new_multiple_files_compile/tasks.json
@@ -84,11 +84,22 @@
                 "${fileDirname}/diff_2redun.c",
                 "${fileDirname}/diff_2redun_30k.c",
                 "${fileDirname}/diff_3redun.c",
+                "${fileDirname}/ec_decode_data_1origin.c",
                 "${fileDirname}/ec_decode_data_16k_2origin_conv.c",
                 "${fileDirname}/ec_decode_data_30k_2origin_conv.c",
                 "${fileDirname}/ec_decode_data_16k_P_origin_conv.c",
                 "${fileDirname}/ec_decode_data_16k_Q_origin_conv.c",
+                "${fileDirname}/ec_decode_data_16k_R_origin_conv.c",
+                "${fileDirname}/ec_decode_data_30k_P_origin_conv.c",
+                "${fileDirname}/ec_decode_data_30k_Q_origin_conv.c",
                 "${fileDirname}/update_2reduns_16k.c",
+                "${fileDirname}/ec_decode_data_16k_3origin_conv.c",
+                "${fileDirname}/ec_decode_data_16k_PQ_origin_conv.c",
+                "${fileDirname}/ec_decode_data_16k_QR_origin_conv.c",
+                "${fileDirname}/ec_decode_data_16k_PR_origin_conv.c",
+                "${fileDirname}/ec_decode_data_16k_P_2origin_conv.c",
+                "${fileDirname}/ec_decode_data_16k_Q_2origin_conv.c",
+                "${fileDirname}/ec_decode_data_16k_R_2origin_conv.c",
                 "-o",
                 "${workspaceFolder}\\EXECUTE\\${fileBasenameNoExtension}.exe",
                 // "-O1",
